# ghleak

./: .gitignore  README.md
.github/workflows/: ci.yml  security.yml
debian/: changelog  control  copyright  ghleak.install  ghleak.lintian-overrides  rules  watch
go/: go.mod  go.sum  main.go
go/cmd/: scan.go
go/internal/: classifier.go  config.go  corporate.go  corporate_updater.go  fetcher.go  llm.go  pipeline_test.go  reporter.go  scanner.go  types.go  workers.go
python/: pyproject.toml  setup.py
python/ghleak/: __init__.py  classifier.py  config.py  corporate_filter.py  corporate_updater.py  fetcher.py  main.py  reporter.py  scanner.py  test_pipeline.py
