[project]
name = "ghleak"
version = "1.1.0"
description = "Multi-forge secret leak scanner — GH Archive + regex-first classification + TruffleHog verification"
requires-python = ">=3.10"
dependencies = [
    "httpx",
]

[project.optional-dependencies]
gemini = ["google-genai"]
anthropic = ["anthropic"]
all = ["google-genai", "anthropic"]

[project.scripts]
ghleak = "ghleak.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
